<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/iconBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="15dp"
            android:src="@drawable/icon_back"
            tools:ignore="ContentDescription"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="22sp"
            android:paddingLeft="15dp"
            android:textColor="#FFFFFF"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/detailsactivity"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageDetail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/content"
        android:scaleType="fitCenter"
        android:src="@drawable/gai02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionBar"
        tools:ignore="MissingConstraints"
        />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:max="5"
        android:paddingLeft="10dp"
        android:paddingTop="16dp"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"
        app:layout_constraintStart_toEndOf="@id/rating"
        app:layout_constraintTop_toBottomOf="@id/myBirthday"
        tools:ignore="MissingConstraints,RtlHardcoded,RtlSymmetry"
        />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:padding="10dp"
        android:text="@string/birthday"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="MissingConstraints,RtlHardcoded"
        />

    <TextView
        android:id="@+id/myBirthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toBottomOf="@+id/myName"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/rating"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:padding="10dp"
        android:text="@string/rating"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthday"
        tools:ignore="MissingConstraints,RtlHardcoded"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDetail"
        tools:ignore="MissingConstraints,RtlHardcoded"
        />

    <TextView
        android:id="@+id/myName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toBottomOf="@+id/imageDetail"
        tools:ignore="MissingConstraints"
        />

</android.support.constraint.ConstraintLayout>